fixed overflow from weird translated mobile meni panels

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-body {
+html,body{
+  overflow-x: hidden;
   background-color: #F7F7F7;
 }
 
@@ -14,7 +15,7 @@ p {
 }
 
 .land {
-  letter-spacing: 5px;
+  letter-spacing: 15px;
   font-weight: lighter;
 }
 
@@ -95,6 +96,7 @@ nav {
 .burger{
   display: none;
   cursor: pointer;
+  padding: 15px;
 }
 
 .burger div{
@@ -103,11 +105,6 @@ nav {
   background-color: white;
   margin-bottom: 8px;
   transition: all 0.2s ease;
-  z-index: 9999;
-}
-
-.nav-active{
-    transform: translateX(0);
 }
 
 @keyframes navLinkFade{
@@ -290,9 +287,11 @@ h2.title{
 }
 
 @media only screen and (max-width: 1000px) {
-  body{
+  html,body{
+    width:1000px;
     overflow-x: hidden;
   }
+
   .card{
     grid-column-end: span 6;
   }
@@ -304,31 +303,34 @@ h2.title{
       margin-bottom: -70%;
   }
 
-  #about h2{margin-top: 5%;margin-bottom: 5%; text-align: center; width: 100%;z-index: -1; font-size: 15px;}
+  #about h2{margin-top: 5%;margin-bottom: 5%; text-align: center; width: 100%;z-index: -1;}
 
-    .nav-links{
-      position: absolute;
-        right: 0px;
-        height: 100%;
-        top: 11vh;
-        background-color: #000;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
+  .nav-links{
+    position: absolute;
+      right: 0px;
+      height: 80%;
+      top: 11vh;
+      background-color: rgba(0,0,0,0.9);
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      transform: translateX(0%);
+      transition: transform 0.5s ease-in;
     }
-    .nav-links li{
-      opacity: 0;
-    }
+
+  .nav-links li{
+    opacity: 0;
+  }
     .burger{
-      display: block;
-    }
+    display: block;
+  }
+
 }
 
 @media only screen and (max-width: 700px) {
-  body{
+  html,body{
+    width:700px;
     overflow-x: hidden;
   }
 
@@ -338,20 +340,21 @@ h2.title{
   .card{
     grid-column-end: span 12;
   }
-  #about h2{margin-top: 5%;margin-bottom: 5%; text-align: center; width: 100%;z-index: -1; font-size: 15px;}
 
-    .nav-links{
-      position: absolute;
-        right: 0px;
-        height: 100%;
-        top: 11vh;
-        background-color: #000;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
+  #about h2{margin-top: 5%;margin-bottom: 5%; text-align: center; width: 100%;z-index: -1;}
+
+  .nav-links{
+    position: absolute;
+      right: 0px;
+      height: 80%;
+      top: 11vh;
+      background-color: rgba(0,0,0,0.9);
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      transform: translateX(0%);
+      transition: transform 0.5s ease-in;
     }
     .nav-links li{
       opacity: 0;
@@ -359,16 +362,14 @@ h2.title{
     .burger{
       display: block;
     }
-
-  }
-
 }
 
-
 @media only screen and (max-width: 500px) {
-  body{
+  html,body{
+    width:500px;
     overflow-x: hidden;
   }
+
   main {
     grid-template-columns: 10px repeat(0, 1fr);
     grid-gap: 10px;
@@ -388,27 +389,32 @@ h2.title{
       font-size: 2.2rem;
       margin-bottom: 60%;
   }
-  #about h2{margin-top: 5%;margin-bottom: 5%; text-align: center; width: 100%;z-index: -1; font-size: 15px;}
+
+  #about h2{margin-top: 5%;margin-bottom: 5%; text-align: center; width: 100%;z-index: -1;}
 
     .nav-links{
       position: absolute;
         right: 0px;
-        height: 100%;
+        height: 80%;
         top: 11vh;
-        background-color: #000;
-        display: flex;
+        background-color: rgba(0,0,0,0.9);
+        display: none;
         flex-direction: column;
         align-items: center;
         width: 100%;
-        transform: translateX(100%);
+        transform: translateX(0%);
         transition: transform 0.5s ease-in;
     }
-    .nav-links li{
-      opacity: 0;
-    }
-    .burger{
-      display: block;
-    }
 
+  .nav-links li{
+    opacity: 0;
   }
+    .burger{
+    display: block;
+  }
+}
+
+.nav-active{
+    transform: translateX(0%);
+    display: flex;
 }
